# dnastack-client

./: .env.dist  .gitattributes  .gitignore  Dockerfile-template  LICENSE  Makefile  README.md  cloudbuild.yaml  defaults.json  requirements.txt  setup.cfg  transformation.js  us-east-1.defaults.json
dnastack/: __main__.py  constants.py  feature_flags.py  json_path.py  omics_cli.py
dnastack/cli/: collections.py
dnastack/client/: base_client.py  base_exceptions.py  constants.py  data_connect.py  drs.py  models.py  result_iterator.py
dnastack/common/: class_decorator.py  console.py  events.py  json_argument_parser.py  logger.py  memory_debugger.py  secret_repository.py  simple_stream.py  tracing.py
docs/: adapters.md  authentications.md  cli-configuration.md  cli.md  dev-code-design-guideline.md  dev-configuration.md  dev-windows.md  full-api-reference.md  glossary.md  how-to-initialize-client.md  how-to-run-e2e-tests.md  introduction-library.md  introduction.md  service-clients.md  service-registry.md
scripts/: build-e2e-test-image.sh  build-package.py  generate-api-docs-in-markdown.py  run-e2e-tests-in-container.sh  run-e2e-tests-locally-in-docker.sh  run-e2e-tests.sh  setup-e2e-tests-for-linux.sh  start-sandbox.sh  test_env_manager.py
tests/: exam_helper.py  exam_helper_for_data_connect.py  exam_helper_for_publisher.py  exam_helper_for_workbench.py  test_common_class_decorator.py  test_http_authenticators_oauth2.py  test_http_session.py  test_json_argument_parser.py  test_workflow_source_loader.py  wallet_hellper.py  workbench_user_service_helper.py
(+238 files in other folders)
