[metadata]
name = dnastack-client-library
version = 3.1.0a0
description = "DNAstack's GA4GH library and CLI"
author = DNAstack
author_email = devs@dnastack.com
url = https://www.dnastack.com
license = Apache License, Version 2.0
long_description = "GA4GH API client and command line tool. Please check out [the documentation](https://docs.omics.ai/products/analysis/python-library) for more details."
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.8
install_requires =
    click >= 8.0.3, < 8.2
    pydantic >= 1.9.0, < 2
    pyjwt >= 2.1.0, < 3
    pyyaml >= 5.4.1
    requests >= 2.23.0, <3
    urllib3 >= 1.25.11, < 2
    kotoba
    imagination >= 3.3.1
    requests-toolbelt >= 0.9.1, < 1
    httpie >= 3.2.1
entry_points =
    [console_scripts]
    dnastack = dnastack.__main__:dnastack
    omics = dnastack.omics_cli:omics

# NOTE: This section is added in 2024-02-16 to reduce the package size an
[options.packages.find]
# include = dnastack.*,dnastack.**
exclude =
    tests*
    tests.*
    tests.**

[options.extras_require]
test = selenium >= 3.141.0; pyjwt >= 2.1.0; jsonpath-ng>=1.5.3
#cli = click >= 8.0.3
